force-app/main/default/objects/Building_Project__c/Building_Project__c.object-meta.xml
<CustomObject>
    <description>The Main Project Record</description>
    <label>Building Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Building Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>