force-app/main/default/objects/Building_Project__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Building Projects</relationshipLabel>
    <relationshipName>BuildingProjects</relationshipName>
    <type>Lookup</type>
</CustomField>