force-app/main/default/objects/Building_Project__c/fields/Condiminium__c.field-meta.xml
<CustomField>
    <fullName>Condiminium__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Apartment</description>
    <label>Condiminium</label>
    <referenceTo>Condominium__c</referenceTo>
    <relationshipLabel>Building Projects</relationshipLabel>
    <relationshipName>BuildingProjects</relationshipName>
    <type>Lookup</type>
</CustomField>