force-app/main/default/objects/Building_Project__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Buying Account</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Customer_Projects</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>