force-app/main/default/objects/Building_Project__c/fields/ProjectStartDate__c.field-meta.xml
<CustomField>
    <fullName>ProjectStartDate__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <description>The Date the Project was Initiated (First Order Placed)</description>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>