force-app/main/default/objects/Building_Project__c/fields/ProjectStatus__c.field-meta.xml
<CustomField>
    <fullName>ProjectStatus__c</fullName>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>