force-app/main/default/objects/Building_Project__c/fields/ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ProjectType__c</fullName>
    <description>The Type of Project</description>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Project_Groups</valueSetName>
    </valueSet>
</CustomField>